# WeatherForecast

./: .gitignore  CMakeLists.txt  README.md  Run.cpp  Run.h  coordinates_data.cpp  coordinates_data.h  main.cpp  wearherView.cpp  wearherView.h  weather_controller.cpp  weather_controller.h  weatherdata.cpp  weatherdata.h
